[package]
name = "unlink"
version = "0.0.0-alpha0.0"
edition = "2021"
license = "MIT"
description = "Lock free linked list"
homepage = "https://github.com/emilHof/unlink"
documentation "https://github.com/emilHof/unlink"
repository = "https://github.com/emilHof/unlink"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
