[package]
name = "unlink"
version = "0.0.0-pre-release3.0"
edition = "2021"
license = "MIT"
description = "Lock free linked list"
homepage = "https://github.com/emilHof/unlink"
documentation = "https://github.com/emilHof/unlink"
repository = "https://github.com/emilHof/unlink"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
haphazard = "0.1"
arbitrary = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
rand = "0.8"
lockfree = "0.5"
