[package]
name = "unlink-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", optional = true, features = ["derive"] }

[dependencies.unlink]
path = ".."
features = ["arbitrary"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "sync_operations"
path = "fuzz_targets/sync_operations.rs"
test = false
doc = false
